--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-aiohttp==3.7.4.post0
 alembic==1.5.4
-async-timeout==3.0.1
 attrs==20.3.0
 autopep8==1.5.5
 certifi==2020.12.5
@@ -9,7 +7,6 @@ click==7.1.2
 Flask==1.1.2
 Flask-Migrate==2.6.0
 Flask-SQLAlchemy==2.4.4
-greenlet==1.0.0
 gunicorn==20.1.0
 idna==2.10
 iniconfig==1.1.1
@@ -17,9 +14,9 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 Mako==1.1.4
 MarkupSafe==1.1.1
-multidict==5.1.0
 packaging==20.9
 pluggy==0.13.1
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 py==1.10.0
 pycodestyle==2.6.0
@@ -31,11 +28,7 @@ python-editor==1.0.4
 requests==2.25.1
 rope==0.19.0
 six==1.15.0
-slack-sdk==3.5.1
-slackclient==2.9.3
 SQLAlchemy==1.3.23
 toml==0.10.2
-typing-extensions==3.10.0.0
 urllib3==1.26.4
 Werkzeug==1.0.1
-yarl==1.6.3
